// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FadeInOut can accept custom styles 1`] = `
<div
  style={
    Object {
      "background": "black",
      "opacity": 0,
      "transitionDelay": null,
      "transitionDuration": "500ms",
      "transitionProperty": "opacity",
      "transitionTimingFunction": "ease",
    }
  }
/>
`;

exports[`FadeInOut renders 1`] = `
<div
  style={
    Object {
      "opacity": 0,
      "transitionDelay": null,
      "transitionDuration": "500ms",
      "transitionProperty": "opacity",
      "transitionTimingFunction": "ease",
    }
  }
/>
`;

exports[`FadeInOut sets transitionDelay with delay prop 1`] = `
<div
  style={
    Object {
      "opacity": 0,
      "transitionDelay": "1s",
      "transitionDuration": "500ms",
      "transitionProperty": "opacity",
      "transitionTimingFunction": "ease",
    }
  }
/>
`;

exports[`FadeInOut sets transitionDuration with duration prop 1`] = `
<div
  style={
    Object {
      "opacity": 0,
      "transitionDelay": null,
      "transitionDuration": "1s",
      "transitionProperty": "opacity",
      "transitionTimingFunction": "ease",
    }
  }
/>
`;

exports[`FadeInOut sets transitionTimingFunction with timingFn prop 1`] = `
<div
  style={
    Object {
      "opacity": 0,
      "transitionDelay": null,
      "transitionDuration": "500ms",
      "transitionProperty": "opacity",
      "transitionTimingFunction": "ease-in-out",
    }
  }
/>
`;
